@@ -14,6 +14,9 @@ Documentation for themes and translations
 Remail link
 Rename files
 
+0.2.1
+test if file size is lower than the maximum allowed
+
 0.3
 Thumbnail of images etc.
 Security, security, security
