@@ -1,3 +1,6 @@
+body {
+  padding:0.5em;
+}
 h1 {
   color:red;
 }
@@ -6,6 +9,7 @@ div {
 }
 
 h1 {
+  margin-top:0;
   height:75px;
   line-height:75px;
   font-wight:bold;
@@ -22,11 +26,25 @@ h1 a {
   color:black;
 }
 
-#uploadForm {
+#expandUploadForm {
   float:right;
-  width:13em;
-  background-color:#bbb;
+}
+
+#expandUploadForm input {
+  border:1px solid #000;
+  background-color:#00f;
+  color:#fff;
+  padding:0.2em;
+  margin-left:0.5em;
+}
+
+#uploadForm {
+  clear:right;
+  float:right;
+  width:22em;
+  background-color:#bbf;
   border:1px solid black;
+  padding:0.5em;
 }
 
 #messageBox {
@@ -37,7 +55,7 @@ h1 a {
 
 #files {
   margin-left:13em;
-  margin-right:14em;
+  margin-right:0.5em;
 }
 
 #faq {
@@ -46,6 +64,16 @@ h1 a {
   padding:0.5em;
   clear:both;
   margin-top:2em;
+}
+
+.deleteButton {
+  border:1px solid black;
+  background-color:#f00;
+}
+
+.renameButton {
+  border:1px solid black;
+  background-color:yellow;
 }
 
 #greeting {
@@ -58,17 +86,20 @@ h1 a {
 #warning {
   background-color:#f55;
   border:1px solid darkred;
+  margin-top:0.2em;
 }
 #ongoing {
   overflow:hidden;
   background-color:#ff0;
   border:1px dotted #aa0;
+  margin-top:0.2em;
 } 
 
 #success {
   overflow:hidden;
   background-color:#0f0;
   border:1px solid #0a0;
+  margin-top:0.2em;
 } 
 
 #footer {
